--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,7 +25,9 @@
     }
   },
   "main": "./dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc --build tsconfig.build.json",
     "dev": "tsc --build tsconfig.json --watch",
@@ -38,9 +40,9 @@
     "@floating-ui/react-dom": "^2.1.2",
     "@markprompt/core": "workspace:*",
     "@radix-ui/react-accessible-icon": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.3",
-    "@radix-ui/react-dropdown-menu": "^2.1.3",
-    "@radix-ui/react-navigation-menu": "^1.2.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-visually-hidden": "^1.1.1",
     "clsx": "^2.1.1",
