--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,9 +25,7 @@
     }
   },
   "main": "./dist/index.js",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "build": "tsc --build tsconfig.build.json",
     "dev": "tsc --build tsconfig.json --watch",
