deps: update pnpm

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "markprompt",
   "private": true,
   "type": "module",
-  "workspaces": ["examples/*", "packages/*"],
+  "workspaces": [
+    "examples/*",
+    "packages/*"
+  ],
   "scripts": {
     "build:packages": "turbo run build --filter @markprompt/*...",
     "build": "turbo run build",
@@ -47,7 +50,7 @@
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.25.0"
   },
-  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
   "pnpm": {
     "overrides": {
       "@types/react": "^19",
