--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
+      - uses: pnpm/action-setup@v4
+        with:
+          run_install: false
       - uses: useblacksmith/setup-node@v5
         with:
           node-version: 22
@@ -34,6 +37,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
+      - uses: pnpm/action-setup@v4
+        with:
+          run_install: false
       - uses: useblacksmith/setup-node@v5
         with:
           node-version: 22
@@ -51,6 +57,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
+      - uses: pnpm/action-setup@v4
+        with:
+          run_install: false
       - uses: useblacksmith/setup-node@v5
         with:
           node-version: 22
