--- a/packages/docusaurus-theme-search/package.json
+++ b/packages/docusaurus-theme-search/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@markprompt/docusaurus-theme-search",
   "version": "0.32.3",
-  "description": "A Markprompt search theme for Docusaurus",
+  "description": "Markprompt search theme for Docusaurus",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/markprompt/markprompt-js.git",
