--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-visually-hidden": "^1.1.3",
+    "@supabase/supabase-js": "2.44.2",
     "clsx": "^2.1.1",
     "downshift": "^9.0.8",
     "emittery": "^1.0.3",
@@ -56,6 +57,7 @@
     "react-textarea-autosize": "^8.5.6",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.5",
+    "uuid": "^9.0.1",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
@@ -66,6 +68,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "msw": "^2.6.2",
     "react": "^19.0.0",
