--- a/examples/with-custom-ui/package.json
+++ b/examples/with-custom-ui/package.json
@@ -13,7 +13,8 @@
     "@markprompt/react": "workspace:*",
     "@markprompt/web": "workspace:*",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^19.0.1",
