--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,7 @@ jobs:
       - run: pnpm install
       - uses: preactjs/compressed-size-action@v2
         with:
+          install-script: 'pnpm install --no-frozen-lockfile'
           build-script: '"build:packages"'
           pattern: '{./packages/**/dist/**/*.{cjs,js},./packages/css/markprompt.css}'
           exclude: '{**/*.map,**/*.d.{ts,cts},**/node_modules/**,./packages/**/node_modules/**/dist/**/*,./packages/eslint-config/dist/**/*}'
