--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.25.0"
   },
-  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
+  "packageManager": "pnpm@10.18.0+sha512-6AT4ifHOzEDVctsITuw+SIFzn43sacD/ENLRvv+aTjCTg7ontbdQBZ1/TBSVNbbNDSyx7Trrc5I5pChKaPQM+g==",
   "pnpm": {
     "overrides": {
       "@types/react": "^19",
